[gd_scene load_steps=7 format=3 uid="uid://bmmot5etbhluq"]

[ext_resource type="Script" path="res://scripts/PowerUpSelect.gd" id="1_4xnrr"]
[ext_resource type="Script" path="res://scripts/PowerUpBox.gd" id="2_l73ih"]
[ext_resource type="FontFile" uid="uid://13j87krg6v02" path="res://MorrisRoman-Black.ttf" id="3_3xjaw"]
[ext_resource type="Script" path="res://scripts/DialogueBox.gd" id="3_5uakd"]
[ext_resource type="Texture2D" uid="uid://bdtfoitttphe3" path="res://sprites/art/old_man_storytelling.png" id="3_kty17"]
[ext_resource type="Texture2D" uid="uid://c5id0egdocnqy" path="res://sprites/blood_splatter1.png" id="4_1hdir"]

[node name="PowerUpSelect" type="Node2D"]
script = ExtResource("1_4xnrr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -640.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = 63.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "Select an ability"
horizontal_alignment = 1

[node name="Score" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -640.0
offset_top = 64.0
offset_right = -32.0
offset_bottom = 90.0
grow_horizontal = 0
text = "Available Points:"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -175.0
offset_right = -32.0
offset_bottom = 175.0
grow_horizontal = 0
grow_vertical = 2

[node name="PowerUp" type="ColorRect" parent="CanvasLayer/Control/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
color = Color(0, 0, 0, 0.196078)
script = ExtResource("2_l73ih")

[node name="Name" type="Label" parent="CanvasLayer/Control/HBoxContainer/PowerUp"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -37.5
offset_top = 18.0
offset_right = 37.5
offset_bottom = 44.0
grow_horizontal = 2
text = "Power Up"
horizontal_alignment = 1

[node name="SelectButton" type="Button" parent="CanvasLayer/Control/HBoxContainer/PowerUp"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -27.0
offset_top = -52.0
offset_right = 27.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 0
text = "Get (2 SP)"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/HBoxContainer/PowerUp"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -62.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Description" type="Label" parent="CanvasLayer/Control/HBoxContainer/PowerUp/MarginContainer"]
layout_mode = 2
text = "Test Test Test Test Test Test Test Test Test Test Test Test Test Test "
horizontal_alignment = 1
autowrap_mode = 2

[node name="PowerUp2" type="ColorRect" parent="CanvasLayer/Control/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
color = Color(0, 0, 0, 0.196078)
script = ExtResource("2_l73ih")

[node name="Name" type="Label" parent="CanvasLayer/Control/HBoxContainer/PowerUp2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -37.5
offset_top = 18.0
offset_right = 37.5
offset_bottom = 44.0
grow_horizontal = 2
text = "Power Up"
horizontal_alignment = 1

[node name="SelectButton" type="Button" parent="CanvasLayer/Control/HBoxContainer/PowerUp2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -27.0
offset_top = -52.0
offset_right = 27.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 0
text = "Get (2 SP)"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/HBoxContainer/PowerUp2"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -62.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Description" type="Label" parent="CanvasLayer/Control/HBoxContainer/PowerUp2/MarginContainer"]
layout_mode = 2
text = "Test Test Test Test Test Test Test Test Test Test Test Test Test Test "
horizontal_alignment = 1
autowrap_mode = 2

[node name="PowerUp3" type="ColorRect" parent="CanvasLayer/Control/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
color = Color(0, 0, 0, 0.196078)
script = ExtResource("2_l73ih")

[node name="Name" type="Label" parent="CanvasLayer/Control/HBoxContainer/PowerUp3"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -37.5
offset_top = 18.0
offset_right = 37.5
offset_bottom = 44.0
grow_horizontal = 2
text = "Power Up"
horizontal_alignment = 1

[node name="SelectButton" type="Button" parent="CanvasLayer/Control/HBoxContainer/PowerUp3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -27.0
offset_top = -52.0
offset_right = 27.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 0
text = "Get (2 SP)"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/HBoxContainer/PowerUp3"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -62.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Description" type="Label" parent="CanvasLayer/Control/HBoxContainer/PowerUp3/MarginContainer"]
layout_mode = 2
text = "Test Test Test Test Test Test Test Test Test Test Test Test Test Test "
horizontal_alignment = 1
autowrap_mode = 2

[node name="ContinueButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -640.0
offset_top = -81.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
text = "Continue"

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 482.0
offset_bottom = 332.0
theme_override_fonts/normal_font = ExtResource("3_3xjaw")
theme_override_font_sizes/normal_font_size = 22
bbcode_enabled = true
text = "test"
script = ExtResource("3_5uakd")

[node name="OldManStorytelling" type="Sprite2D" parent="."]
position = Vector2(168, 451)
scale = Vector2(3, 3)
texture = ExtResource("3_kty17")

[node name="BG" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
z_index = -1000
position = Vector2(515, 204)
scale = Vector2(150, 150)
texture = ExtResource("4_1hdir")
metadata/_edit_lock_ = true

[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer/PowerUp/SelectButton" to="CanvasLayer/Control/HBoxContainer/PowerUp" method="select_powerup"]
[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer/PowerUp2/SelectButton" to="CanvasLayer/Control/HBoxContainer/PowerUp2" method="select_powerup"]
[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer/PowerUp3/SelectButton" to="CanvasLayer/Control/HBoxContainer/PowerUp3" method="select_powerup"]
[connection signal="pressed" from="CanvasLayer/Control/ContinueButton" to="." method="on_continue"]
